--- a/阴阳师.html
+++ b/阴阳师.html
@@ -35,12 +35,12 @@
 </head>
 <body>
     <div class="rolelist">
-        <a class="list" href="#"><img src="images/y1.gif""></a>
-        <a class="list" href="#"><img src="images/y2.jpg"">
-            <div class="hide"><img class="image" src="images/y6.jpg""></div></a>
-        <a class="list" href="#"><img src="images/y3.jpg""></a>
-        <a class="list" href="#"><img src="images/y4.jpg""></a>
-        <a class="list" href="#"><img src="images/y5.gif""></a>
+        <a class="list" href="#"><img src="y1.gif""></a>
+        <a class="list" href="#"><img src="y2.jpg"">
+            <div class="hide"><img class="image" src="y6.jpg""></div></a>
+        <a class="list" href="#"><img src="y3.jpg""></a>
+        <a class="list" href="#"><img src="y4.jpg""></a>
+        <a class="list" href="#"><img src="y5.gif""></a>
     </div>
 </body>
 </html>
